[package]
name = "Project-2"
version = "0.1.0"
edition = "2026"

[dependencies]
cust = { git = "https://github.com/rust-gpu/rust-cuda", rev = "7fa76f3d717038a92c90bf4a482b0b9dd3259344"}
kernels = { path = "kernels"}

[build-dependencies]
cuda_builder = { git = "https://github.com/rust-gpu/rust-cuda", "7fa76f3d717038a92c90bf4a482b0b9dd3259344"}

