[package]
name = "kernels"
version = "0.1.0"
edition = "2024"

[dependencies]
cuda_std = { git = "https://github.com/rust-gpu/rust-cuda", rev = "7fa76f3d717038a92c90bf4a482b0b9dd3259344"}

[lib]
# cdylib: allows dynamic linking because nvptx doesn't support binary crate types
# rlib: allows 'kernels' crate to be used as a dependency by 'Project_1'
crate-type = ["cdylib", "rlib"]
