cargo-features = ["edition2024"]
[package]
name = "kernels"
version = "0.1.0"
edition = "2024"

[dependencies]
cuda_std = "0.2.2"

[lib]
# cdylib: allows dynamic linking because nvptx doesn't support binary crate types
# rlib: allows 'kernels' crate to be used as a dependency by 'Project_1'
crate-type = ["cdylib", "rlib"]
